--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,23 +22,23 @@
         <div class="container" id="container">
           <div class="row top">
             <div class="col-lg-8 col-md-8 col-sm-7 col-left">
-              <div class="name"><a href="index.html">Jeff Scholen</a>
+              <div class="name"><a href="/">Jeff Scholen</a>
               </div> 
             </div>
             <div class="col-lg-3 col-md-3 col-sm-5 col-right">
               <nav>
                 <ul class="list-inline" id="menu">
                   <li>
-                      <a href="index.html">work</a>
+                      <a href="/">work</a>
                   </li>
-                  <li>
+         <!--         <li>
                       <a href="blog.html">blog</a>
+                  </li> -->
+                  <li>
+                      <a href="/contacts">contact</a>
                   </li>
                   <li>
-                      <a href="contact.html">contact</a>
-                  </li>
-                  <li>
-                      <a href="contact.html">resume</a>
+                      <a href="/resume">resume</a>
                   </li>                  
                   <li class="last">
                      <!-- <a href="#"><img class="social" <%=image_tag("icon/icon-facebook.png", :alt => "facebook")%></a> -->
