--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
                         
                         <!--activity descritpion-->
                         <p class="work">Living in Atlanta</p>
-                        <p>Jeff Scholen, a 45 year old husband and father to three rambunctious girls,  has had an unyielding hidden interest in software development while laboring in the manufacturing sector for 17 years. Finding himself in between jobs in a weak market, he took ahold of his dream to become a software developer through the Iron Yard. Adding to his passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated his need to create something out of nothing.</p>
+                        <p>I am a mechanical engineer who has had an unyielding hidden interest in software development while laboring in the manufacturing sector for 17 years. While finding myself in between jobs in a weak market, I took ahold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
                     
                     </div>
                 </div>   
@@ -41,7 +41,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix web-design">
                 <div class="panel panel-default item">
                     <div class="panel-heading">
-                        <a href="project-example.html">
+                        <a href="http://www.devanage.com" target="_blank">
                         
                             <!--work image-->
                             <img class="img-responsive item-img" <%=image_tag("FinalProject.jpg", :alt => "Work 1")%>
@@ -51,20 +51,21 @@
                     <div class="panel-body">
                     
                         <!--work title-->
-                        <a href="project-example.html"><h4 class="item-title">Devanage</h4></a>
+                        <a href="http://www.devanage.com" target="_blank"><h4 class="item-title">Devanage</h4></a>
                         
                         <!--work category-->
                         <p class="item-category">Business App</p>
                         
                         <!--work short description-->
-                        <p class="item-description">420x260-A complex Business Application to manage documents and employee training</p>
+                        <p class="item-description">A business process application for managing documents.</p>
                         <hr>
                         
                         <!--work tags-->
                         <p class="item-tags">
                             <a href="#">ruby on rails</a> ,
                             <a href="#">postgresql</a> ,
-                            <a href="#">heroku</a>
+                            <a href="#">heroku</a>,
+                            <a href="#">bootstrap</a>
                         </p>
                         
                     </div>
@@ -74,19 +75,19 @@
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix print">
                 <div class="panel panel-default item">
                     <div class="panel-heading">
-                        <a href="project-example.html">
+                        <a href="http://mysterious-crag-6928.herokuapp.com/" target="_blank">
                             <img class="img-responsive item-img" <%=image_tag("work/projet-example-6.jpg", :alt => "Work 2")%>
                         </a>    
                     </div>
                     <div class="panel-body">
-                        <a href="project-example.html"><h4 class="item-title">Project Title</h4></a>
-                        <p class="item-category">Web design</p>
-                        <p class="item-description">Iam virtutem ex consuetudine vitae sermonisque nostri nostri nostri</p>
+                        <a href="http://mysterious-crag-6928.herokuapp.com/" target="_blank"><h4 class="item-title">Homework Trakker</h4></a>
+                        <p class="item-category">Iron Yard</p>
+                        <p class="item-description">A web application for tracking homework and homework submissions.</p>
                         <hr>
                         <p class="item-tags">
-                            <a href="#">illustration</a> ,
-                            <a href="#">graphic design</a> ,
-                            <a href="#">website</a>
+                            <a href="#">ruby on rails</a> ,
+                            <a href="#">heroku</a> ,
+                            <a href="#">bootstrap</a>
                         </p>
                     </div>
                 </div>
@@ -94,162 +95,42 @@
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix web-design">
                 <div class="panel panel-default item">
                     <div class="panel-heading">
-                        <a href="project-example.html">
-                            <img class="img-responsive item-img" <%=image_tag("work/projet-example-3.png", :alt => "Work 3")%>
+                        <a href="http://www.testdrives.us/">
+                            <img class="img-responsive item-img" <%=image_tag("test_drive420x260.png", :alt => "Work 3")%>
                         </a>    
                     </div>
                     <div class="panel-body">
-                        <a href="project-example.html"><h4 class="item-title">Project Title</h4></a>
-                        <p class="item-category">Illustration</p>
-                        <p class="item-description">Iam virtutem ex consuetudine vitae sermonisque nostri nostri nostri</p>
+                        <a href="http://www.testdrives.us/"><h4 class="item-title">Test Drive</h4></a>
+                        <p class="item-category">Start Up</p>
+                        <p class="item-description">A website for validating a start up idea.</p>
                         <hr>
                         <p class="item-tags">
-                            <a href="#">illustration</a> ,
-                            <a href="#">graphic design</a> ,
-                            <a href="#">website</a>
+                            <a href="#">ruby on rails</a> ,
+                            <a href="#">bootstrap</a>
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix print">
+             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix web-design">
                 <div class="panel panel-default item">
                     <div class="panel-heading">
-                        <a href="project-example.html">
-                            <img class="img-responsive item-img" <%=image_tag("work/projet-example-4.png", :alt => "Work 4")%>
-                        </a>
+                        <a href="https://github.com/jmscholen/to_do_pair_programming_app3/tree/master/to_do_pair">
+                            <img class="img-responsive item-img" <%=image_tag("to_do_pair.png", :alt => "Work 3")%>
+                        </a>    
                     </div>
                     <div class="panel-body">
-                        <a href="project-example.html"><h4 class="item-title">Project Title</h4></a>
-                        <p class="item-category">Logotype</p>
-                        <p class="item-description">Iam virtutem ex consuetudine vitae sermonisque nostri nostri nostri</p>
+                        <a href="https://github.com/jmscholen/to_do_pair_programming_app3/tree/master/to_do_pair"><h4 class="item-title">ToDo App</h4></a>
+                        <p class="item-category">Iron Yard</p>
+                        <p class="item-description">A simple to do app done with pair programming with a class mate.</p>
                         <hr>
                         <p class="item-tags">
-                            <a href="#">illustration</a> ,
-                            <a href="#">graphic design</a> ,
-                            <a href="#">website</a>
+                            <a href="#">ruby on rails</a> ,
+                            <a href="#">bootstrap</a>
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix illustration">
-                <div class="panel panel-default item">
-                    <div class="panel-heading">
-                        <a href="project-example.html">
-                            <img class="img-responsive item-img" <%=image_tag("work/projet-example-5.png", :alt => "Work 5")%>
-                        </a>    
-                    </div>
-                    <div class="panel-body">
-                        <a href="project-example.html"><h4 class="item-title">Project Title</h4></a>
-                        <p class="item-category">Logotype</p>
-                        <p class="item-description">Iam virtutem ex consuetudine vitae sermonisque nostri nostri nostri</p>
-                        <hr>
-                        <p class="item-tags">
-                            <a href="#">illustration</a> ,
-                            <a href="#">graphic design</a> ,
-                            <a href="#">website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix print">
-                <div class="panel panel-default item">
-                    <div class="panel-heading">
-                        <a href="project-example.html">
-                            <img class="img-responsive item-img" <%=image_tag("work/projet-example-9.jpg", :alt => "Work 6")%>
-                        </a>    
-                    </div>
-                    <div class="panel-body">
-                        <a href="project-example.html"><h4 class="item-title">Project Title</h4></a>
-                        <p class="item-category">Web design</p>
-                        <p class="item-description">Iam virtutem ex consuetudine vitae sermonisque nostri nostri nostri</p>
-                        <hr>
-                        <p class="item-tags">
-                            <a href="#">illustration</a> ,
-                            <a href="#">graphic design</a> ,
-                            <a href="#">website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix illustration">
-                <div class="panel panel-default item">
-                    <div class="panel-heading">
-                        <a href="project-example.html">
-                            <img class="img-responsive item-img" <%=image_tag("work/projet-example-7.png", :alt => "Work 7")%>
-                        </a>    
-                    </div>
-                    <div class="panel-body">
-                        <a href="project-example.html"><h4 class="item-title">Project Title</h4></a>
-                        <p class="item-category">Branding</p>
-                        <p class="item-description">Iam virtutem ex consuetudine vitae sermonisque nostri nostri nostri</p>
-                        <hr>
-                        <p class="item-tags">
-                            <a href="#">illustration</a> ,
-                            <a href="#">graphic design</a> ,
-                            <a href="#">website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix illustration">
-                <div class="panel panel-default item">
-                    <div class="panel-heading">
-                        <a href="project-example.html">
-                            <img class="img-responsive item-img" <%=image_tag("work/projet-example-8.png", :alt => "Work 8")%>
-                        </a>    
-                    </div>
-                    <div class="panel-body">
-                        <a href="project-example.html"><h4 class="item-title">Project Title</h4></a>
-                        <p class="item-category">Poster</p>
-                        <p class="item-description">Iam virtutem ex consuetudine vitae sermonisque nostri nostri nostri</p>
-                        <hr>
-                        <p class="item-tags">
-                            <a href="#">illustration</a> ,
-                            <a href="#">graphic design</a> ,
-                            <a href="#">website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix illustration">
-                <div class="panel panel-default item">
-                    <div class="panel-heading">
-                        <a href="project-example.html">
-                            <img class="img-responsive item-img" <%=image_tag("work/projet-example-2.png", :alt => "Work 9")%>
-                        </a>    
-                    </div>
-                    <div class="panel-body">
-                        <a href="project-example.html"><h4 class="item-title">Project Title</h4></a>
-                        <p class="item-category">Logotype</p>
-                        <p class="item-description">Iam virtutem ex consuetudine vitae sermonisque nostri nostri nostri</p>
-                        <hr>
-                        <p class="item-tags">
-                            <a href="#">illustration</a> ,
-                            <a href="#">graphic design</a> ,
-                            <a href="#">website</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix print">
-                <div class="panel panel-default item">
-                    <div class="panel-heading">
-                        <a href="project-example.html">
-                            <img class="img-responsive item-img" <%=image_tag("work/projet-example-10.png", :alt => "Work 10")%>
-                        </a>    
-                    </div>
-                    <div class="panel-body">
-                        <a href="project-example.html"><h4 class="item-title">Project Title</h4></a>
-                        <p class="item-category">Logotype</p>
-                        <p class="item-description">Iam virtutem ex consuetudine vitae sermonisque nostri nostri nostri</p>
-                        <hr>
-                        <p class="item-tags">
-                            <a href="#">illustration</a> ,
-                            <a href="#">graphic design</a> ,
-                            <a href="#">website</a>
-                        </p>
-                    </div>
-                </div>
+             </div>
             </div>
         </section>
         <a class="btn btn-block scroll-top visible-xs">
