made corrections for website

--- a/app/views/contacts/contact.html
+++ b/app/views/contacts/contact.html
@@ -24,7 +24,7 @@
                         </form>
                     </div> -->
                     <div class="panel-footer">
-                        <a href="mailto:jmscholen@gmail.com?subject=Found Your Portfolio&body=Hey Jeff, I like to speak with you about an upcoming opportunity!" class="btn btn-grey btn-lg btn-block">Send Me Your Contact Info</a>
+                        <a href="mailto:jmscholen@gmail.com?subject=Found Your Portfolio&body=Hey Jeff, I'd like to speak with you about an upcoming opportunity!" class="btn btn-grey btn-lg btn-block">Interested in working with me?</a>
                     </div>
            <!--     </div> -->
             </div>
