--- a/app/views/resume/myresume.html
+++ b/app/views/resume/myresume.html
@@ -1,151 +1,104 @@
 
-<div class="row">
-	<div class="col-md-8 col-md-offset-2">
-	  <div class="row">
-	    <div class="col-md-6">
-	    <h1>Jeff Scholen</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <div class="row">
+        <div class="col-md-6">
+        <h1>Jeff Scholen</h1>
 
-	    <h2>Atlanta</h2>
-	    </div>
-	    <div class="col-md-6">
-	    <img class="media-object img-circle pull-right" data-src="holder.js/64x64" alt="64x64" src="http:&#x2F;&#x2F;www.gravatar.com&#x2F;avatar&#x2F;f08c290735a7127ca7d6c62bffe689d4?s=100&amp;r=pg&amp;d=mm" style="width: 100px; height: 100px; margin-top: 20px;">
+        <h2>Atlanta</h2>
+        </div>
+        <div class="col-md-6">
+        <img class="media-object img-circle pull-right" data-src="holder.js/64x64" alt="64x64" src="http:&#x2F;&#x2F;www.gravatar.com&#x2F;avatar&#x2F;f08c290735a7127ca7d6c62bffe689d4?s=100&amp;r=pg&amp;d=mm" style="width: 100px; height: 100px; margin-top: 20px;">
 
-	    </div>
-	    </div>
-	  <hr style="color: #ccc; height: 4px;" />
-	  <section class="row">
-	    <header class="col-md-3">
-	      <h3>About</h3>
-	    </header>
-	    <div class="col-md-9">
-	    <p>I am a recent graduate of the Iron Yard’s 12 week full time Rails Engineering Bootcamp. My core competencies are Ruby on Rails, Postgresql, jQuery, HTML5, CSS3 and other related technologies. I have experience with RSpec and Test Driven Development. Prior to this, I had been working in engineering related roles in the manufacturing industry.</p>
-	    <strong>Phone:</strong> (404) 295-6995 <br />
-	    <strong>Email:</strong> jmscholen@gmail.com<br />
-	    <strong>Twitter:</strong> <a href="https://twitter.com/jmscholen">@jmscholen</a><br />
-	    <strong>Github:</strong> <a href="https://github.com/jmscholen">jmscholen</a><br />
-	    </div>
-	  </section>
-	  <section class="row">
-	    <header class="col-md-3">
-	      <h3>Work Experience</h3>
-	    </header>
-	    <div class="col-md-9">
-	      <div class="skills">
-	        <h3>Remington Medical Inc.</h3>
-	        <strong>Engineering Project Manager</strong>
-	        <p>2/2012 - 12/2013</p>
-	        <p>Managed the development of medical devices. Responsible for the direction to a small team of enigneers.</p>
-	        <ul>
-	          <li>Led a team of department stakeholders and engineers to receipt of clearance to market a medical device from the FDA.</li>
-	          <li>Led a team to prove the viablity of a new technology platform for assembly of hyperdermic needles.</li>
-	          <li>Successully reduced the cost of an existing product line by 30%.</li>
-	        </ul>
-	        <hr />            <h3>CardioMEMS Inc.</h3>
-	        <strong>Senior Quality Engineer</strong>
-	        <p>12/2007 - 1/2012</p>
-	        <p>Managed the quality system requirements for class II and III medical devices.</p>
-	        <ul>
-	          <li>Technical lead engineer responsible for compliance across all departments for meeting FDA and ISO requirements</li>
-	          <li>Successfuly managed external audits for complaince to quality system compliance</li>
-	        </ul>
-	        <hr />            <h3>Facet Technologies Inc</h3>
-	        <strong>R&amp;D Project Manager</strong>
-	        <p>3/2004 - 6/2007</p>
-	        <p>Managed the development of OEM medical devices.</p>
-	        <ul>
-	          <li>Technical manager responsible leading teams to design and transfer medical devices to manufacturing.</li>
-	          <li>Recognized for assisting the Sales and Marketing group with acquiring an $8 million contract</li>
-	          <li>Recognized for saving the company over $100,000 for sourcing needs thru ebay.com</li>
-	        </ul>
-	        <hr />            <h3>Lucent Technologies Inc</h3>
-	        <strong>Mechnical Designer</strong>
-	        <p>10/2000 - 1/2003</p>
-	        <p>Responsible for CAD design and modeling of next generation manufucaturing processes for the research and development group.</p>
-	        <ul>
-	          <li>Recognized for introducing a novel manufacturing process to supply fiber optics bundles into a larger nested cabling system.</li>
-	        </ul>
-	        <hr />
-	      </div>
-	    </div>
-	  </section>
+        </div>
+        </div>
+      <hr style="color: #ccc; height: 4px;" />
+      <section class="row">
+        <header class="col-md-3">
+          <h3>About</h3>
+        </header>
+        <div class="col-md-9">
+        <p>I am a recent graduate of the Iron Yard’s Rails Engineering Bootcamp. My core competencies are Ruby on Rails, Postgresql, jQuery, HTML5, CSS3 and other related technologies. I have experience with RSpec and Test Driven Development. Prior to the Iron Yard, I worked as an engineer in the manufacturing industry.</p>
+        <strong>Phone:</strong> (404) 295-6995 <br />
+        <strong>Email:</strong>  <a href="mailto:jmscholen@gmail.com"/>jmscholen@gmail.com</a><br
+        <strong>Twitter:</strong> <a href="https://twitter.com/jmscholen">@jmscholen</a><br />
+        <strong>Github:</strong> <a href="https://github.com/jmscholen">jmscholen</a><br />
+        </div>
+      </section>
+      <section class="row">
+        <header class="col-md-3">
+          <h3>Work Experience</h3>
+        </header>
+        <div class="col-md-9">
+          <div class="skills">
+            <h3>Remington Medical Inc.</h3>
+            <strong>Engineering Project Manager</strong>
+            <p>2/2012 - 12/2013</p>
+            <p>Cross-functional team leader responsible for the development of medical devices. Received FDA clearance for a class II medical device and saved the company 30% in costs for an existing product line.</p>
+  
+            <hr />            <h3>CardioMEMS Inc.</h3>
+            <strong>Senior Quality Engineer</strong>
+            <p>12/2007 - 1/2012</p>
+            <p>Technical lead engineer responsible for compliance across all departments for meeting FDA and ISO requirements. Promoted to senior position in 2009.</p>
 
-	  <section class="row">
-	    <header class="col-md-3">
-	      <h3>Education</h3>
-	    </header>
-	    <div class="col-md-9">
-	      <div class="skills">
-	        <h3>The Iron Yard</h3>
-	        <h4>Rails Engineering, Ruby on Rails</h4>
-	        <p>2014 - 2014</p>
-	        <p></p>
-	        <ul>
-	        </ul>
-	        <hr />
-	        <h3>Southern Polytechnic State University</h3>
-	        <h4>Mechanical Engineering Technology, Bachelor of Science</h4>
-	        <p>1994 - 1996</p>
-	        <p></p>
-	        <ul>
-	        </ul>
-	        <hr />
-	      </div>
-	    </div>
-	  </section>
-	  <section class="row">
-	    <header class="col-md-3">
-	      <h3>Skills</h3>
-	    </header>
-	    <div class="col-md-9">
-	      <div class="row-fluid skills">
-	        <ul class="col-md-6">
+            <hr />            <h3>Facet Technologies Inc</h3>
+            <strong>R&amp;D Project Manager</strong>
+            <p>3/2004 - 6/2007</p>
+            <p>Technical manager responsible for leading teams in the design and transfer of medical devices to manufacturing. Recognized for saving $100,000 in costs by sourcing machinery through ebay.com and helping the sales and marketing department win an $8 million contract. Promoted twice during my employment.</p>
 
-	          <li>
-	            <h4>Web Development</h4>
-	            <ul>
-	              <li>Ruby on Rails</li>
-	              <li>Postgresql</li>
-	              <li>RSpec</li>
-	              <li>TDD</li>
-	              <li>HTML</li>
-	              <li>CSS</li>
-	              <li>Javascript</li>
-	            </ul>
-	          </li>
-	        </ul>
-	        <ul class="col-md-6">
+          </div>
+        </div>
+      </section>
 
-	          <li>
-	            <h4>Interpersonal</h4>
-	            <ul>
-	              <li>Optimistic</li>
-	              <li>Calm</li>
-	              <li>Reasonable</li>
-	              <li>Speaks Effectively</li>
-	            </ul>
-	          </li>
-	        </ul>
-	      </div>
-	    </div>
-	  </section>
-	  <section class="row">
-	    <header class="col-md-3">
-	      <h3>References</h3>
-	    </header>
-	    <div class="col-md-9">
-	      <div class="row-fluid skills">
+      <section class="row">
+        <header class="col-md-3">
+          <h3>Education</h3>
+        </header>
+        <div class="col-md-9">
+          <div class="skills">
+            <h3>The Iron Yard</h3>
+            <h4>Rails Engineering, Ruby on Rails</h4>
+            <p></p>
+            <p></p>
+            <ul>
+            </ul>
+            <hr />
+            <h3>Southern Polytechnic State University</h3>
+            <h4>Mechanical Engineering Technology, Bachelor of Science</h4>
+            <p></p>
+            <p></p>
+            <ul>
+            </ul>
+            <hr />
+          </div>
+        </div>
+      </section>
+      <section class="row">
+        <header class="col-md-3">
+          <h3>Skills</h3>
+        </header>
+        <div class="col-md-9">
+          <div class="row-fluid skills">
+            <ul class="col-md-6">
 
-	        <p>Please contact Sarah Ladato. -
-	          <strong>The Iron Yard</strong>
-	        </p>
+              <li>
+                <h4>Web Development</h4>
+                <ul>
+                  <li>Ruby on Rails</li>
+                  <li>Postgresql</li>
+                  <li>RSpec</li>
+                  <li>TDD</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Javascript</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
-	        <p>Additional references available upon request. -
-	          <strong></strong>
-	        </p>
-	      </div>
-	    </div>
-	  </section>
-
-	</div>
+    </div>
+  </div>
 </div>
-
