--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
                         
                         <!--activity descritpion-->
                         <p class="work">Living in Atlanta</p>
-                        <p>I am a mechanical engineer who has had an unyielding hidden interest in software development while laboring in the manufacturing sector for 17 years. While finding myself in between jobs in a weak market, I took ahold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
+                        <p>While laboring in the manufacturing sector as a mechanical engineer for 17 years, I had an unyielding, hidden interest in software development. Finding myself in between jobs in a weak market, I took a hold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
                     
                     </div>
                 </div>   
@@ -95,12 +95,12 @@
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix web-design">
                 <div class="panel panel-default item">
                     <div class="panel-heading">
-                        <a href="http://www.testdrives.us/">
+                        <a href="http://www.testdrives.us" target="_blank">
                             <img class="img-responsive item-img" <%=image_tag("test_drive420x260.png", :alt => "Work 3")%>
                         </a>    
                     </div>
                     <div class="panel-body">
-                        <a href="http://www.testdrives.us/"><h4 class="item-title">Test Drive</h4></a>
+                        <a href="http://www.testdrives.us" target="_blank"><h4 class="item-title">Test Drive</h4></a>
                         <p class="item-category">Start Up</p>
                         <p class="item-description">A website for validating a start up idea.</p>
                         <hr>
@@ -114,12 +114,12 @@
              <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix web-design">
                 <div class="panel panel-default item">
                     <div class="panel-heading">
-                        <a href="https://github.com/jmscholen/to_do_pair_programming_app3/tree/master/to_do_pair">
+                        <a href="https://github.com/jmscholen/to_do_pair_programming_app3/tree/master/to_do_pair" target="_blank">
                             <img class="img-responsive item-img" <%=image_tag("to_do_pair.png", :alt => "Work 3")%>
                         </a>    
                     </div>
                     <div class="panel-body">
-                        <a href="https://github.com/jmscholen/to_do_pair_programming_app3/tree/master/to_do_pair"><h4 class="item-title">ToDo App</h4></a>
+                        <a href="https://github.com/jmscholen/to_do_pair_programming_app3/tree/master/to_do_pair" target="_blank"><h4 class="item-title">ToDo App</h4></a>
                         <p class="item-category">Iron Yard</p>
                         <p class="item-description">A simple to do app done with pair programming with a class mate.</p>
                         <hr>
