Continue refining website

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,8 +41,10 @@
                       <a href="/resume">resume</a>
                   </li>                  
                   <li class="last">
-                     <!-- <a href="#"><img class="social" <%=image_tag("icon/icon-facebook.png", :alt => "facebook")%></a> -->
-                      <a href="http://twitter.com/jmscholen"><img class="social" <%=image_tag("icon/icon-twitter.png", :alt => "twitter")%></a>
+                    <a href="http://www.linkedin.com/in/jeffscholen/" target="_blank"><img class="social" <%=image_tag("icon/icon-linkedin.png", :alt => "linkedin")%></a>
+
+                    <a href="http://github.com/jmscholen" target="_blank"><img class="social" <%=image_tag("icon/GitHub-Mark-Light-32px.png", :alt => "github")%></a>
+
                   </li>
                 </ul>
               </nav>
