--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -204,20 +204,21 @@ body,
 }
 .row.top .col-right .social {
   position: relative;
-  top: -3px;
+  top: 0px;
+  left:10px;
   width: 20px;
   height: 20px;
 }
 @media (min-width: 992px) {
   .row.top .col-right .social {
-    width: 32px;
-    height: 32px;
+    width: 27px;
+    height: 27px;
   }
 }
 @media (min-width: 468px) and (max-width: 768px) {
   .row.top .col-right .social {
-    width: 32px;
-    height: 32px;
+    width: 22px;
+    height: 22px;
   }
 }
 .row.bottom {
