Finalizing Portfolio Page

--- a/app/views/contacts/contact.html
+++ b/app/views/contacts/contact.html
@@ -3,29 +3,19 @@
 <div class="col-lg-8 col-md-8 col-sm-7 col-left">
     <section>
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2">
+            <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 text-center">
                 
                 <!--input contact-->
                 <h1>Contact</h1>
                 <h1 class="spacer">___</h1>
-                <p>I'm available for hire or freelance. I would love to talk about any opportunities you may have.</p>
-                <hr>
-          <!--      <div class="panel panel-default contact btn-footer">
-                    <div class="panel-body">
-                        <form role="form">
-                            <div class="form-group">
-                                <label for="contactEmail">Email address</label>
-                                <input type="email" class="form-control" id="contactEmail">
-                            </div>
-                            <div class="form-group">
-                                <label for="contactMessage">Message</label>
-                                <textarea class="form-control" rows="10" id="contactMessage"></textarea>
-                            </div>
-                        </form>
-                    </div> -->
-                    <div class="panel-footer">
-                        <a href="mailto:jmscholen@gmail.com?subject=Found Your Portfolio&body=Hey Jeff, I'd like to speak with you about an upcoming opportunity!" class="btn btn-grey btn-lg btn-block">Interested in working with me?</a>
-                    </div>
+                <h2><p>I'm available for hire or freelance. I would love to talk about any opportunities you may have.</p>
+                <a href="mailto:jmscholen@gmail.com?subject=Found Your Portfolio&body=Hey Jeff, I'd like to speak with you about an upcoming opportunity!">jmscholen@gmail.com</a>
+                <br>
+                <a href="http://github.com/jmscholen" target="_blank">GitHub Repo</a>
+                <br>
+                <p>Mobile: 404-295-6995</p></h2>
+
+          
            <!--     </div> -->
             </div>
         </div>    
