--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,12 +9,12 @@
                     <img  <%=image_tag("132.JPG", :alt => "Project header")%>
                      
                     <!--activity title -->
-                    <h1>hello. i'm a fullstack rails developer</h1>
+                    <h1>hello. i'm a fullstack rails developer.</h1>
                     <h1 class="spacer">___</h1>
                     
                     <!--activity descritpion-->
                     <p class="work">Living in Atlanta</p>
-                    <p>While laboring in the manufacturing sector as a mechanical engineer for 17 years, I had an unyielding, hidden interest in software development. Finding myself in between jobs in a weak market, I took a hold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
+                    <p>I had an unyielding, hidden interest in software development, while laboring in the manufacturing sector as a mechanical engineer for 17 years. Finding myself in between jobs in a weak market, I took a hold of my dream to become a software developer through the Iron Yard. Adding to my passions for 3D printing, making useful gadgets, and cooking up a mean Lebanese kibbe, coding has satiated my need to create something out of nothing.</p>
                 
                 </div>
             </div>   
@@ -22,11 +22,11 @@
         </div>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-5 col-right">
-        <div id="scroll-shadow"></div>
+        <!--<div id="scroll-shadow"></div>-->
         
         <h1 class="visible-xs section-header">Last work</h1>
         <h1 class="visible-xs text-center spacer">___</h1>
-        <h4 class="text-center section-header">Portfolio of Work</h1>
+        <h4 class="text-center section-header" id="portheader">Portfolio of Work</h1>
         <!--work choice
         <div class="item-choice">
             <a href="#" class="filter" data-filter="all">All</a> 
@@ -102,7 +102,7 @@
                     <div class="panel-body">
                         <a href="http://www.testdrives.us" target="_blank"><h4 class="item-title">Test Drive</h4></a>
                         <p class="item-category">Start Up</p>
-                        <p class="item-description">A website for validating a start up idea.</p>
+                        <p class="item-description">A website for validating a startup idea.</p>
                         <hr>
                         <p class="item-tags">
                             <a href="#">ruby on rails</a> ,
@@ -119,9 +119,9 @@
                         </a>    
                     </div>
                     <div class="panel-body">
-                        <a href="https://github.com/jmscholen/to_do_pair_programming_app3/tree/master/to_do_pair" target="_blank"><h4 class="item-title">ToDo App</h4></a>
+                        <a href="https://github.com/jmscholen/to_do_pair_programming_app3/tree/master/to_do_pair" target="_blank"><h4 class="item-title">"To Do" App</h4></a>
                         <p class="item-category">Iron Yard</p>
-                        <p class="item-description">A simple 'to do' app done coded with paired programmer.</p>
+                        <p class="item-description">A simple "to do" app coded with a paired programmer.</p>
                         <hr>
                         <p class="item-tags">
                             <a href="#">ruby on rails</a> ,
