--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2,6 +2,10 @@
 body {
   font-family: 'Lato', sans-serif;
 }
+
+#portheader {
+  font-size: 30px;
+}
 .heading {
   font-family: 'Open Sans Condensed', sans-serif;
 }
