Changing link to howework trakker app

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -75,12 +75,12 @@
             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-6 mix print">
                 <div class="panel panel-default item">
                     <div class="panel-heading">
-                        <a href="http://mysterious-crag-6928.herokuapp.com/" target="_blank">
+                        <a href="http://lit-river-3074.herokuapp.com/" target="_blank">
                             <img class="img-responsive item-img" <%=image_tag("work/projet-example-6.jpg", :alt => "Work 2")%>
                         </a>    
                     </div>
                     <div class="panel-body">
-                        <a href="http://mysterious-crag-6928.herokuapp.com/" target="_blank"><h4 class="item-title">Homework Trakker</h4></a>
+                        <a href="http://lit-river-3074.herokuapp.com/" target="_blank"><h4 class="item-title">Homework Trakker</h4></a>
                         <p class="item-category">Iron Yard</p>
                         <p class="item-description">A web application for tracking homework and homework submissions.</p>
                         <hr>
